--- a/poke/package.json
+++ b/poke/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "poke",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "babel-plugin-styled-components": "^2.1.4"
-  }
+	"name": "poke",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest --watch"
+	},
+	"dependencies": {
+		"next": "14.0.3",
+		"react": "^18",
+		"react-dom": "^18"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.1.4",
+		"@testing-library/react": "^14.1.2",
+		"babel-jest": "^29.7.0",
+		"babel-plugin-styled-components": "^2.1.4",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"react-test-renderer": "^18.2.0"
+	}
 }
